# RustMine

./: .editorconfig  .gitignore  README.md  package.json
.github/workflows/: main.yml
backend/: Cargo.toml  README.md  package.json
backend/src/: lib.rs
backend/src/auth/: mod.rs
backend/src/status_check/: mod.rs
backend/src/structs/: response.rs
frontend/: index.html  main.js  preload.js  splash.html
frontend/html/: setting.html  settings.html
frontend/script/: index.js  preload.js  settings.js  splash.js
frontend/script/utils/: dialogue.js  ipc.js  translation.js
frontend/static/font/: Overpass.css  Oxygen.css
frontend/style/: index.css  keyframes.css  palette.css  root.css  settings.css  splash.css  theme-in-use.css
frontend/style/rose-pine/: LICENSE.txt  dawn.css  main.css  moon.css
frontend/translation/: en_US.json
