[package]
name = "rustmine-backend"
version = "0.0.0"
description = "Backend for the rustmine project."
authors = ["sourTaste000"]
license = "AGPL-3.0-or-later"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
