[package]
name = "rustmine-backend"
version = "0.0.0"
description = "Backend for the rustmine project."
authors = ["sourTaste000"]
license = "AGPL-3.0-or-later"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
either = "1.6.1"
reqwest = { version = "0.11.9", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }


[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
