[package]
name = "rustmine-backend"
version = "0.0.0"
description = "Backend for the rustmine project."
authors = ["sourTaste000"]
license = "AGPL-3.0-or-later"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = { version = "1.0" }
serde_json = "1.0"
serde_derive = "1.0.136"
keyring = "1.0.0"


[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
